implemented plural form string localization using Soluling

--- a/Hitomi-Scroll-Viewer/Strings/en-US/SearchPageComponent/DownloadItem.resw
+++ b/Hitomi-Scroll-Viewer/Strings/en-US/SearchPageComponent/DownloadItem.resw
@@ -124,8 +124,8 @@
     <value>Downloading...</value>
   </data>
   <data name="StatusText_Failed" xml:space="preserve">
-    <value>Failed to download {0} images</value>
-    <comment>0: Number of missing indexes</comment>
+    <value>Failed to download {plural, one {{0} image} other {{0} images}}</value>
+    <comment>{0}: Number of missing images</comment>
   </data>
   <data name="StatusText_FetchingGalleryInfo" xml:space="preserve">
     <value>Fetching gallery information...</value>
