added and updated string resources

--- a/Hitomi-Scroll-Viewer/Strings/ko-KR/MainWindow.resw
+++ b/Hitomi-Scroll-Viewer/Strings/ko-KR/MainWindow.resw
@@ -117,13 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="DialogButtonText_Cancel" xml:space="preserve">
-    <value>Cancel</value>
-  </data>
-  <data name="DialogButtonText_Exit" xml:space="preserve">
-    <value>Exit</value>
-  </data>
-  <data name="DialogButtonText_Yes" xml:space="preserve">
-    <value>Yes</value>
+  <data name="ExitConfirmText" xml:space="preserve">
+    <value>아직 다운로드중인 갤러리가 남아있어요. 그래도 종료할까요?</value>
   </data>
 </root>
