--- a/Hitomi-Scroll-Viewer/Strings/en-US/MainWindow.resw
+++ b/Hitomi-Scroll-Viewer/Strings/en-US/MainWindow.resw
@@ -117,13 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="DialogButtonText_Cancel" xml:space="preserve">
-    <value>Cancel</value>
-  </data>
-  <data name="DialogButtonText_Exit" xml:space="preserve">
-    <value>Exit</value>
-  </data>
-  <data name="DialogButtonText_Yes" xml:space="preserve">
-    <value>Yes</value>
+  <data name="ExitConfirmText" xml:space="preserve">
+    <value>There are remaining galleries which are downloading. Exit anyway?</value>
   </data>
 </root>
