--- a/Hitomi-Scroll-Viewer/Strings/en-US/Resources.resw
+++ b/Hitomi-Scroll-Viewer/Strings/en-US/Resources.resw
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AppDisplayName" xml:space="preserve">
+    <value>Hitomi Scroll Viewer</value>
+  </data>
   <data name="DialogButtonText_Cancel" xml:space="preserve">
     <value>Cancel</value>
   </data>
