--- a/Hitomi-Scroll-Viewer/Strings/ko-KR/Resources.resw
+++ b/Hitomi-Scroll-Viewer/Strings/ko-KR/Resources.resw
@@ -138,4 +138,7 @@
   <data name="ExampleTagFilterName_3" xml:space="preserve">
     <value>예시: 블루 아카이브, 1인 여성 포함 그리고 중국어 제외</value>
   </data>
+  <data name="ExampleTagFilterName_4" xml:space="preserve">
+    <value>예시: Non-H 포함</value>
+  </data>
 </root>
