--- a/Hitomi-Scroll-Viewer/Strings/ko-KR/Resources.resw
+++ b/Hitomi-Scroll-Viewer/Strings/ko-KR/Resources.resw
@@ -117,16 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="DialogButtonText_Cancel" xml:space="preserve">
+  <data name="Text_Cancel" xml:space="preserve">
     <value>취소</value>
   </data>
-  <data name="DialogButtonText_Close" xml:space="preserve">
+  <data name="Text_Close" xml:space="preserve">
     <value>닫기</value>
   </data>
-  <data name="DialogButtonText_Exit" xml:space="preserve">
+  <data name="Text_Exit" xml:space="preserve">
     <value>종료</value>
   </data>
-  <data name="DialogButtonText_Yes" xml:space="preserve">
+  <data name="Text_Yes" xml:space="preserve">
     <value>예</value>
   </data>
   <data name="ExampleTagFilterName_1" xml:space="preserve">
@@ -140,5 +140,8 @@
   </data>
   <data name="ExampleTagFilterName_4" xml:space="preserve">
     <value>예시: Non-H 포함</value>
+  </data>
+  <data name="Text_No" xml:space="preserve">
+    <value>아니오</value>
   </data>
 </root>
