--- a/Hitomi-Scroll-Viewer/Strings/en-US/Resources.resw
+++ b/Hitomi-Scroll-Viewer/Strings/en-US/Resources.resw
@@ -145,6 +145,9 @@
   <data name="ExampleTagFilterName_4" xml:space="preserve">
     <value>Example: Include Non-H</value>
   </data>
+  <data name="Text_Error" xml:space="preserve">
+    <value>Error</value>
+  </data>
   <data name="Text_No" xml:space="preserve">
     <value>No</value>
   </data>
