--- a/Hitomi-Scroll-Viewer/Strings/ko-KR/Resources.resw
+++ b/Hitomi-Scroll-Viewer/Strings/ko-KR/Resources.resw
@@ -141,10 +141,16 @@
   <data name="ExampleTagFilterName_4" xml:space="preserve">
     <value>예시: Non-H 포함</value>
   </data>
+  <data name="Text_Bookmarks" xml:space="preserve">
+    <value>북마크</value>
+  </data>
   <data name="Text_Error" xml:space="preserve">
     <value>오류</value>
   </data>
   <data name="Text_No" xml:space="preserve">
     <value>아니오</value>
+  </data>
+  <data name="Text_TagFilters" xml:space="preserve">
+    <value>태그 필터</value>
   </data>
 </root>
