fixed invalid example 2 tag filter

--- a/Hitomi-Scroll-Viewer/Strings/en-US/Resources.resw
+++ b/Hitomi-Scroll-Viewer/Strings/en-US/Resources.resw
@@ -137,7 +137,7 @@
     <value>Example: Include English, Full Color and Exclude Game CG</value>
   </data>
   <data name="ExampleTagFilterName_2" xml:space="preserve">
-    <value>Example: Include Doujinshi, Manga, Naruto, Korean</value>
+    <value>Example: Include Doujinshi, Naruto, Korean</value>
   </data>
   <data name="ExampleTagFilterName_3" xml:space="preserve">
     <value>Example: Include Blue Archive, Sole Female and Exclude Chinese</value>
