--- a/Hitomi-Scroll-Viewer/Strings/en-US/Resources.resw
+++ b/Hitomi-Scroll-Viewer/Strings/en-US/Resources.resw
@@ -157,4 +157,7 @@
   <data name="Text_TagFilters" xml:space="preserve">
     <value>Tag filters</value>
   </data>
+  <data name="Text_Page" xml:space="preserve">
+    <value>Page</value>
+  </data>
 </root>
