--- a/Hitomi-Scroll-Viewer/Strings/ko-KR/ViewPage.resw
+++ b/Hitomi-Scroll-Viewer/Strings/ko-KR/ViewPage.resw
@@ -123,6 +123,9 @@
   <data name="GoBackBtn.Label" xml:space="preserve">
     <value>돌아가기</value>
   </data>
+  <data name="MoreSettingsContentDialog.Title" xml:space="preserve">
+    <value>추가 설정</value>
+  </data>
   <data name="PageNavigatorTextBlock.Text" xml:space="preserve">
     <value>페이지로 가기</value>
   </data>
@@ -149,6 +152,9 @@
   </data>
   <data name="Text_StringArray_ViewDirection" xml:space="preserve">
     <value>왼쪽에서 오른쪽으로, 오른쪽에서 왼쪽으로</value>
+  </data>
+  <data name="UsePageFlipEffectCheckBox.Content" xml:space="preserve">
+    <value>페이지 넘기기 효과 사용</value>
   </data>
   <data name="ViewDirectionSelectorTextBlock.Text" xml:space="preserve">
     <value>보는 방향</value>
