--- a/Hitomi-Scroll-Viewer/Strings/en-US/SearchPageComponent/SyncManagerComponent/SyncContentDialog.resw
+++ b/Hitomi-Scroll-Viewer/Strings/en-US/SearchPageComponent/SyncManagerComponent/SyncContentDialog.resw
@@ -159,6 +159,9 @@
   <data name="InfoBar_Upload_Success_Message" xml:space="preserve">
     <value>File has been uploaded successfully.</value>
   </data>
+  <data name="SyncContentDialog.PrimaryButtonText" xml:space="preserve">
+    <value>Sync</value>
+  </data>
   <data name="SyncDirectionRadioButton1.Content" xml:space="preserve">
     <value>Upload</value>
   </data>
