--- a/Hitomi-Scroll-Viewer/Strings/en-US/ViewPage.resw
+++ b/Hitomi-Scroll-Viewer/Strings/en-US/ViewPage.resw
@@ -123,8 +123,8 @@
   <data name="GoBackBtn.Label" xml:space="preserve">
     <value>Go back</value>
   </data>
-  <data name="MoreSettingsContentDialog.Title" xml:space="preserve">
-    <value>Additional settings</value>
+  <data name="MoreSettingsBtn.Label" xml:space="preserve">
+    <value>More settings</value>
   </data>
   <data name="PageNavigatorTextBlock.Text" xml:space="preserve">
     <value>Go to page</value>
