--- a/Hitomi-Scroll-Viewer/Strings/ko-KR/ViewPage.resw
+++ b/Hitomi-Scroll-Viewer/Strings/ko-KR/ViewPage.resw
@@ -123,7 +123,7 @@
   <data name="GoBackBtn.Label" xml:space="preserve">
     <value>돌아가기</value>
   </data>
-  <data name="MoreSettingsContentDialog.Title" xml:space="preserve">
+  <data name="MoreSettingsBtn.Label" xml:space="preserve">
     <value>추가 설정</value>
   </data>
   <data name="PageNavigatorTextBlock.Text" xml:space="preserve">
