--- a/Hitomi-Scroll-Viewer/Strings/ko-KR/Resources.resw
+++ b/Hitomi-Scroll-Viewer/Strings/ko-KR/Resources.resw
@@ -129,17 +129,17 @@
   <data name="Text_Yes" xml:space="preserve">
     <value>예</value>
   </data>
-  <data name="ExampleTagFilterName_1" xml:space="preserve">
-    <value>예시: 영어, 풀컬러 포함 그리고 게임 CG 제외</value>
+  <data name="ExampleTagFilterSet_1" xml:space="preserve">
+    <value>영어, 풀컬러</value>
   </data>
-  <data name="ExampleTagFilterName_2" xml:space="preserve">
-    <value>예시: 동인지, 나루토, 한국어 포함</value>
+  <data name="ExampleTagFilterSet_2" xml:space="preserve">
+    <value>동인지, 나루토, 한국어</value>
   </data>
-  <data name="ExampleTagFilterName_3" xml:space="preserve">
-    <value>예시: 블루 아카이브, 1인 여성 포함 그리고 중국어 제외</value>
+  <data name="ExampleTagFilterSet_3" xml:space="preserve">
+    <value>블루 아카이브, 1인 여성</value>
   </data>
-  <data name="ExampleTagFilterName_4" xml:space="preserve">
-    <value>예시: Non-H 포함</value>
+  <data name="ExampleTagFilterSet_4" xml:space="preserve">
+    <value>Non-H</value>
   </data>
   <data name="Text_Bookmarks" xml:space="preserve">
     <value>북마크</value>
