--- a/Hitomi-Scroll-Viewer/Strings/en-US/MainWindow.resw
+++ b/Hitomi-Scroll-Viewer/Strings/en-US/MainWindow.resw
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="ExitConfirmText" xml:space="preserve">
+  <data name="Exit_Confirm_Title_Text" xml:space="preserve">
     <value>There are remaining galleries which are downloading. Exit anyway?</value>
   </data>
 </root>
