--- a/Hitomi-Scroll-Viewer/Strings/en-US/SearchPage.resw
+++ b/Hitomi-Scroll-Viewer/Strings/en-US/SearchPage.resw
@@ -117,26 +117,11 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="ButtonText_ClearTextBoxes" xml:space="preserve">
-    <value>Clear text in text boxes</value>
-  </data>
-  <data name="ButtonText_CreateTagFilter" xml:space="preserve">
-    <value>Create a new tag filter</value>
-  </data>
-  <data name="ButtonText_DeleteTagFilter" xml:space="preserve">
-    <value>Delete current tag filter</value>
-  </data>
-  <data name="ButtonText_RenameTagFilter" xml:space="preserve">
-    <value>Rename current tag filter</value>
-  </data>
-  <data name="ButtonText_SaveTagFilter" xml:space="preserve">
-    <value>Save current tag filter</value>
-  </data>
-  <data name="CreateHyperlinkBtnTextBlock.Text" xml:space="preserve">
-    <value>Create and copy search link</value>
-  </data>
-  <data name="GalleryIDTextBox.PlaceholderText" xml:space="preserve">
+  <data name="DownloadInputTextBox.PlaceholderText" xml:space="preserve">
     <value>Enter Gallery ID(s) or URL(s) here. For example: 2058075 or https://hitomi.la/...</value>
+  </data>
+  <data name="HyperlinkCreateButtonTextBlock.Text" xml:space="preserve">
+    <value>Create and copy search link</value>
   </data>
   <data name="Notification_GalleryIDTextBox_ContentEmpty_Title" xml:space="preserve">
     <value>Enter ID(s) or URL(s)</value>
@@ -147,59 +132,8 @@
   <data name="Notification_GalleryIDTextBox_ContentInvalid_Title" xml:space="preserve">
     <value>Invalid ID(s) or URL(s)</value>
   </data>
-  <data name="Notification_SeachLink_ContentEmpty_Title" xml:space="preserve">
-    <value>All selected tag filters are empty.</value>
-  </data>
-  <data name="Notification_TagFilter_Create_1_Title" xml:space="preserve">
-    <value>Create tag filter {0}?</value>
-  </data>
-  <data name="Notification_TagFilter_Create_2_Title" xml:space="preserve">
-    <value>Tag filter {0} has been created.</value>
-  </data>
-  <data name="Notification_TagFilter_Delete_1_Title" xml:space="preserve">
-    <value>Delete {0}?</value>
-  </data>
-  <data name="Notification_TagFilter_Delete_2_Title" xml:space="preserve">
-    <value>{0} has been deleted.</value>
-  </data>
-  <data name="Notification_TagFilter_NameDup_Content" xml:space="preserve">
-    <value>A tag filter with that name already exists.</value>
-  </data>
-  <data name="Notification_TagFilter_NameDup_Title" xml:space="preserve">
-    <value>Duplicate tag filter name</value>
-  </data>
-  <data name="Notification_TagFilter_NameEmpty_Content" xml:space="preserve">
-    <value>Please enter a tag filter name.</value>
-  </data>
-  <data name="Notification_TagFilter_NameEmpty_Title" xml:space="preserve">
-    <value>Empty tag filter name</value>
-  </data>
-  <data name="Notification_TagFilter_Overlap_Title" xml:space="preserve">
-    <value>The following tag filters are overlapping in include and exclude lists:</value>
-  </data>
-  <data name="Notification_TagFilter_Rename_1_Title" xml:space="preserve">
-    <value>Rename {0} to {1}?</value>
-  </data>
-  <data name="Notification_TagFilter_Rename_2_Title" xml:space="preserve">
-    <value>{0} has been renamed to {1}.</value>
-  </data>
-  <data name="Notification_TagFilter_Save_1_Content" xml:space="preserve">
-    <value>The contents in {0} will be overwritten.</value>
-  </data>
-  <data name="Notification_TagFilter_Save_1_Title" xml:space="preserve">
-    <value>Save current tag filters on {0}?</value>
-  </data>
-  <data name="Notification_TagFilter_Save_2_Title" xml:space="preserve">
-    <value>{0} has been saved.</value>
-  </data>
-  <data name="TagFilterEditDescTextBlock.Text" xml:space="preserve">
-    <value>Select a tag filter to edit:</value>
-  </data>
   <data name="TagFilterSelectionDescTextBlock.Text" xml:space="preserve">
     <value>Select tag filter(s) to create search links</value>
-  </data>
-  <data name="TagNameTextBox.PlaceholderText" xml:space="preserve">
-    <value>Enter a tag filter name here to create or rename one.</value>
   </data>
   <data name="Text_BookmarkNumPerPage" xml:space="preserve">
     <value>Bookmark per page</value>
