--- a/Hitomi-Scroll-Viewer/Strings/ko-KR/SearchPage.resw
+++ b/Hitomi-Scroll-Viewer/Strings/ko-KR/SearchPage.resw
@@ -117,89 +117,20 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="ButtonText_ClearTextBoxes" xml:space="preserve">
-    <value>입력칸 초기화</value>
-  </data>
-  <data name="ButtonText_CreateTagFilter" xml:space="preserve">
-    <value>새로운 태그 필터 생성</value>
-  </data>
-  <data name="ButtonText_DeleteTagFilter" xml:space="preserve">
-    <value>선택된 태그 필터 삭제</value>
-  </data>
-  <data name="ButtonText_RenameTagFilter" xml:space="preserve">
-    <value>선택된 태그 필터 이름 바꾸기</value>
-  </data>
-  <data name="ButtonText_SaveTagFilter" xml:space="preserve">
-    <value>선택된 태그 필터 저장</value>
-  </data>
-  <data name="CreateHyperlinkBtnTextBlock.Text" xml:space="preserve">
-    <value>검색 링크를 생성 후 복사하기</value>
-  </data>
-  <data name="GalleryIDTextBox.PlaceholderText" xml:space="preserve">
+  <data name="DownloadInputTextBox.PlaceholderText" xml:space="preserve">
     <value>여기에 갤러리 ID 또는 링크를 입력하세요. 예시: 2058075 또는 https://hitomi.la/...</value>
   </data>
-  <data name="Notification_GalleryIDTextBox_ContentEmpty_Title" xml:space="preserve">
+  <data name="HyperlinkCreateButtonTextBlock.Text" xml:space="preserve">
+    <value>검색 링크를 생성 후 복사하기</value>
+  </data>
+  <data name="Notification_DownloadInputTextBox_Empty_Title" xml:space="preserve">
     <value>갤러리 ID 또는 링크를 입력하세요</value>
   </data>
-  <data name="Notification_GalleryIDTextBox_ContentInvalid_Content" xml:space="preserve">
-    <value>인식 가능한 갤러리 ID 또는 링크를 입력해주세요.</value>
-  </data>
-  <data name="Notification_GalleryIDTextBox_ContentInvalid_Title" xml:space="preserve">
+  <data name="Notification_DownloadInputTextBox_Invalid_Title" xml:space="preserve">
     <value>인식 불가능한 갤러리 ID 또는 링크입니다</value>
-  </data>
-  <data name="Notification_SeachLink_ContentEmpty_Title" xml:space="preserve">
-    <value>선택된 모든 태그 필터들이 비어있습니다.</value>
-  </data>
-  <data name="Notification_TagFilter_Create_1_Title" xml:space="preserve">
-    <value>태그 필터 {0}을(를) 생성할까요?</value>
-  </data>
-  <data name="Notification_TagFilter_Create_2_Title" xml:space="preserve">
-    <value>태그 필터 {0}이(가) 생성되었습니다.</value>
-  </data>
-  <data name="Notification_TagFilter_Delete_1_Title" xml:space="preserve">
-    <value>{0}을(를) 삭제할까요?</value>
-  </data>
-  <data name="Notification_TagFilter_Delete_2_Title" xml:space="preserve">
-    <value>{0}이(가) 삭제되었습니다.</value>
-  </data>
-  <data name="Notification_TagFilter_NameDup_Content" xml:space="preserve">
-    <value>이미 존재하는 태그 필터 이름입니다.</value>
-  </data>
-  <data name="Notification_TagFilter_NameDup_Title" xml:space="preserve">
-    <value>중복된 태그 필터 이름</value>
-  </data>
-  <data name="Notification_TagFilter_NameEmpty_Content" xml:space="preserve">
-    <value>태그 필터 이름을 입력해주세요.</value>
-  </data>
-  <data name="Notification_TagFilter_NameEmpty_Title" xml:space="preserve">
-    <value>태그 필터 이름이 비어있음</value>
-  </data>
-  <data name="Notification_TagFilter_Overlap_Title" xml:space="preserve">
-    <value>다음 태그 필터들이 포함과 제외 항목에 중복되어 있습니다: </value>
-  </data>
-  <data name="Notification_TagFilter_Rename_1_Title" xml:space="preserve">
-    <value>{0}의 이름을 {1}로 변경할까요?</value>
-  </data>
-  <data name="Notification_TagFilter_Rename_2_Title" xml:space="preserve">
-    <value>{0}의 이름이 {1}로 변경되었습니다.</value>
-  </data>
-  <data name="Notification_TagFilter_Save_1_Content" xml:space="preserve">
-    <value>{0}의 내용이 덮어씌워집니다.</value>
-  </data>
-  <data name="Notification_TagFilter_Save_1_Title" xml:space="preserve">
-    <value>현재 태그 필터를 {0}에 저장할까요?</value>
-  </data>
-  <data name="Notification_TagFilter_Save_2_Title" xml:space="preserve">
-    <value>{0}이(가) 저장되었습니다.</value>
-  </data>
-  <data name="TagFilterEditDescTextBlock.Text" xml:space="preserve">
-    <value>편집할 태그 필터를 선택:</value>
   </data>
   <data name="TagFilterSelectionDescTextBlock.Text" xml:space="preserve">
     <value>검색 링크를 생성하려면 태그 필터를 선택하세요</value>
-  </data>
-  <data name="TagNameTextBox.PlaceholderText" xml:space="preserve">
-    <value>여기에 생성 또는 이름을 바꿀 태그 필터의 이름을 입력하세요.</value>
   </data>
   <data name="Text_BookmarkNumPerPage" xml:space="preserve">
     <value>페이지당 북마크 수</value>
