--- a/HitomiScrollViewerApp/Strings/en-US/Resources.resw
+++ b/HitomiScrollViewerApp/Strings/en-US/Resources.resw
@@ -160,4 +160,10 @@
   <data name="ExampleTagFilterSet_4" xml:space="preserve">
     <value>Non-H</value>
   </data>
+  <data name="Text_Exclude" xml:space="preserve">
+    <value>Exlclude</value>
+  </data>
+  <data name="Text_Include" xml:space="preserve">
+    <value>Include</value>
+  </data>
 </root>
