--- a/HitomiScrollViewerApp/Strings/ko-KR/SearchPageComponent/CRUDActionContentDialog.resw
+++ b/HitomiScrollViewerApp/Strings/ko-KR/SearchPageComponent/CRUDActionContentDialog.resw
@@ -123,4 +123,22 @@
   <data name="Error_Message_SameName" xml:space="preserve">
     <value>같은 이름으로 변경할 수 없습니다.</value>
   </data>
+  <data name="Text_Create" xml:space="preserve">
+    <value>생성</value>
+  </data>
+	<data name="Text_Delete" xml:space="preserve">
+    <value>삭제</value>
+  </data>
+	<data name="Text_Rename" xml:space="preserve">
+    <value>이름 변경</value>
+  </data>
+	<data name="Title_Create" xml:space="preserve">
+    <value>새롭게 생성할 태그 필터 모음의 이름을 입력해주세요:</value>
+  </data>
+	<data name="Title_Delete" xml:space="preserve">
+    <value>삭제할 태그 필터 모음들을 선택해주세요:</value>
+  </data>
+	<data name="Title_Rename" xml:space="preserve">
+    <value>새로운 이름을 입력해주세요:</value>
+  </data>
 </root>
