--- a/HitomiScrollViewerApp/Strings/ko-KR/SearchPageComponent/SyncContentDialog.resw
+++ b/HitomiScrollViewerApp/Strings/ko-KR/SearchPageComponent/SyncContentDialog.resw
@@ -145,7 +145,7 @@
     <value>Google Drive에 액세스할 권한이 없습니다. 다시 로그인 후 액세스 권한을 부여해주세요.</value>
   </data>
   <data name="InfoBar_Error_Unknown_Message" xml:space="preserve">
-    <value>알 수 없는 오류가 발생했습니다. 잠시 뒤에 시도해주세요.</value>
+    <value>알 수 없는 오류가 발생했습니다. 잠시 뒤에 다시 시도해주세요.</value>
   </data>
   <data name="InfoBar_Fetch_Canceled_Message" xml:space="preserve">
     <value>파일 가져오기가 취소되었습니다.</value>
