--- a/HitomiScrollViewerApp/Strings/ko-KR/SearchPageComponent/DownloadItem.resw
+++ b/HitomiScrollViewerApp/Strings/ko-KR/SearchPageComponent/DownloadItem.resw
@@ -127,29 +127,32 @@
     <value>다운로드 중...</value>
   </data>
   <data name="StatusText_Failed" xml:space="preserve">
-    <value>{plural, other {{0}}}개의 이미지를 다운로드 하지 못했습니다</value>
+    <value>{plural, other {{0}}}개의 이미지를 다운로드 하지 못했습니다.</value>
     <comment>{0}: Number of missing images</comment>
   </data>
   <data name="StatusText_FetchingGalleryInfo" xml:space="preserve">
     <value>갤러리 정보를 가져오는 중...</value>
   </data>
   <data name="StatusText_FetchingGalleryInfo_Error" xml:space="preserve">
-    <value>갤러리 정보를 가져오는 도중 문제가 발생했습니다</value>
+    <value>갤러리 정보를 가져오는 도중 오류가 발생했습니다.</value>
   </data>
   <data name="StatusText_FetchingServerTime" xml:space="preserve">
     <value>서버 시간을 가져오는 중...</value>
   </data>
   <data name="StatusText_FetchingServerTime_Error" xml:space="preserve">
-    <value>서버 시간을 가져오는 도중 문제가 발생했습니다</value>
+    <value>서버 시간을 가져오는 도중 오류가 발생했습니다.</value>
   </data>
   <data name="StatusText_Paused" xml:space="preserve">
-    <value>다운로드가 일시정지 되었습니다</value>
+    <value>다운로드가 일시정지 되었습니다.</value>
   </data>
   <data name="StatusText_ReadingGalleryInfo" xml:space="preserve">
     <value>갤러리 정보를 읽는 중...</value>
   </data>
   <data name="StatusText_ReadingGalleryInfo_Error" xml:space="preserve">
-    <value>갤러리 정보를 읽는 도중 문제가 발생했습니다</value>
+    <value>갤러리 정보를 읽는 도중 오류가 발생했습니다.</value>
+  </data>
+  <data name="StatusText_Unknown_Error" xml:space="preserve">
+    <value>알 수 없는 오류가 발생했습니다.</value>
   </data>
   <data name="ThreadNumComboBoxHeader.Text" xml:space="preserve">
     <value>다운로드 스레드</value>
