--- a/HitomiScrollViewerApp/Strings/ko-KR/SearchPageComponent/LoadProgressReporter.resw
+++ b/HitomiScrollViewerApp/Strings/ko-KR/SearchPageComponent/LoadProgressReporter.resw
@@ -117,16 +117,28 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="PleaseWaitTextBlock.Text" xml:space="preserve">
-    <value>모든 과정이 완료 될 때까지 기다려주세요.</value>
+  <data name="Text_AddingExampleTFSs" xml:space="preserve">
+    <value>예시 태그 필터 모음들을 생성하는 중...</value>
   </data>
-  <data name="Text_Migrating_BookmarkGalleries" xml:space="preserve">
+  <data name="Text_Initialising" xml:space="preserve">
+    <value>시작하는 중...</value>
+  </data>
+  <data name="Text_LoadingDatabase" xml:space="preserve">
+    <value>데이터베이스를 불러오는 중...</value>
+  </data>
+  <data name="Text_MigratingGalleries" xml:space="preserve">
     <value>북마크 갤러리들을 이전하는 중...</value>
   </data>
-  <data name="Text_Migrating_TagFilterSets" xml:space="preserve">
+  <data name="Text_MigratingTFSs" xml:space="preserve">
     <value>태그 필터 모음들을 이전하는 중...</value>
   </data>
-  <data name="TitleTextBlock.Text" xml:space="preserve">
+  <data name="Text_MovingImageFolder" xml:space="preserve">
+    <value>이미지 저장 폴더를 옮기는 중...</value>
+  </data>
+  <data name="Text_PleaseWait" xml:space="preserve">
+    <value>모든 과정이 완료 될 때까지 기다려주세요.</value>
+  </data>
+  <data name="Text_Title" xml:space="preserve">
     <value>사용자 데이터를 버전 3 데이터 형식으로 이전하는 중...</value>
   </data>
 </root>
