--- a/HitomiScrollViewerApp/Strings/en-US/SearchPageComponent/LoadProgressReporter.resw
+++ b/HitomiScrollViewerApp/Strings/en-US/SearchPageComponent/LoadProgressReporter.resw
@@ -127,7 +127,7 @@
     <value>Loading database...</value>
   </data>
   <data name="Text_MigratingGalleries" xml:space="preserve">
-    <value>Migrating bookmark galleries...</value>
+    <value>Migrating galleries...</value>
   </data>
   <data name="Text_MigratingTFSs" xml:space="preserve">
     <value>Migrating tag filter sets...</value>
@@ -139,6 +139,6 @@
     <value>Please wait until all processes are completed.</value>
   </data>
   <data name="Text_Title" xml:space="preserve">
-    <value>Migrating user data into version 3 data format...</value>
+    <value>Loading...</value>
   </data>
 </root>
