--- a/HitomiScrollViewerApp/Strings/en-US/ViewPage.resw
+++ b/HitomiScrollViewerApp/Strings/en-US/ViewPage.resw
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Array_Orientation" xml:space="preserve">
+    <value>Vertical, Horizontal</value>
+  </data>
+  <data name="Array_ViewDirection" xml:space="preserve">
+    <value>Left to right, Right to left</value>
+  </data>
   <data name="AutoScrollIntervalSliderTextBlock.Text" xml:space="preserve">
     <value>Auto scroll interval (seconds)</value>
   </data>
@@ -149,12 +155,6 @@
   </data>
   <data name="Text_Notification_NoImagesToLoad_Title" xml:space="preserve">
     <value>There are no downloaded images.</value>
-  </data>
-  <data name="Text_StringArray_Orientation" xml:space="preserve">
-    <value>Vertical, Horizontal</value>
-  </data>
-  <data name="Text_StringArray_ViewDirection" xml:space="preserve">
-    <value>Left to right, Right to left</value>
   </data>
   <data name="UsePageFlipEffectCheckBox.Content" xml:space="preserve">
     <value>Use page flip effect</value>
