--- a/HitomiScrollViewerApp/Strings/ko-KR/ViewPage.resw
+++ b/HitomiScrollViewerApp/Strings/ko-KR/ViewPage.resw
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Array_Orientation" xml:space="preserve">
+    <value>세로, 가로</value>
+  </data>
+  <data name="Array_ViewDirection" xml:space="preserve">
+    <value>왼쪽에서 오른쪽으로, 오른쪽에서 왼쪽으로</value>
+  </data>
   <data name="AutoScrollIntervalSliderTextBlock.Text" xml:space="preserve">
     <value>자동 스크롤 간격 (초)</value>
   </data>
@@ -149,12 +155,6 @@
   </data>
   <data name="Text_Notification_NoImagesToLoad_Title" xml:space="preserve">
     <value>다운로드된 이미지가 없습니다.</value>
-  </data>
-  <data name="Text_StringArray_Orientation" xml:space="preserve">
-    <value>세로, 가로</value>
-  </data>
-  <data name="Text_StringArray_ViewDirection" xml:space="preserve">
-    <value>왼쪽에서 오른쪽으로, 오른쪽에서 왼쪽으로</value>
   </data>
   <data name="UsePageFlipEffectCheckBox.Content" xml:space="preserve">
     <value>페이지 넘기기 효과 사용</value>
