--- a/HitomiScrollViewerApp/Strings/en-US/SearchPageComponent/TagFilterSetEditor.resw
+++ b/HitomiScrollViewerApp/Strings/en-US/SearchPageComponent/TagFilterSetEditor.resw
@@ -135,4 +135,7 @@
   <data name="Notification_Selected_TagFilterSets_Empty_Title" xml:space="preserve">
     <value>All of the selected tag filter sets are empty.</value>
   </data>
+  <data name="AutoSaveCheckBox_Content" xml:space="preserve">
+    <value>Auto Save Tag Filters</value>
+  </data>
 </root>
