--- a/HitomiScrollViewerApp/Strings/ko-KR/SearchPageComponent/TagFilterSetEditor.resw
+++ b/HitomiScrollViewerApp/Strings/ko-KR/SearchPageComponent/TagFilterSetEditor.resw
@@ -135,4 +135,7 @@
   <data name="Notification_Selected_TagFilterSets_Empty_Title" xml:space="preserve">
     <value>선택된 모든 태그 필터 모음들이 비어있습니다.</value>
   </data>
+  <data name="AutoSaveCheckBox_Content" xml:space="preserve">
+    <value>태그 필터 자동 저장</value>
+  </data>
 </root>
