--- a/HitomiScrollViewerApp/Strings/ko-KR/SearchPage.resw
+++ b/HitomiScrollViewerApp/Strings/ko-KR/SearchPage.resw
@@ -135,4 +135,7 @@
   <data name="Text_BookmarkNumPerPage" xml:space="preserve">
     <value>페이지당 북마크 수</value>
   </data>
+  <data name="Exit_Confirm_Title_Text" xml:space="preserve">
+    <value>아직 다운로드 중인 갤러리가 남아있어요. 그래도 종료할까요?</value>
+  </data>
 </root>
