modified string resource

--- a/HitomiScrollViewerApp/Strings/ko-KR/SearchPageComponent/LoadProgressReporter.resw
+++ b/HitomiScrollViewerApp/Strings/ko-KR/SearchPageComponent/LoadProgressReporter.resw
@@ -117,8 +117,8 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Text_AddingDatabaseTags" xml:space="preserve">
-    <value>데이터베이스에 태그를 추가하는 중...</value>
+  <data name="Text_InitialisingDatabase" xml:space="preserve">
+    <value>데이터베이스를 초기 설정하는 중...</value>
   </data>
   <data name="Text_AddingExampleTFSs" xml:space="preserve">
     <value>예시 태그 필터 모음들을 생성하는 중...</value>
