--- a/HitomiScrollViewerApp/Strings/en-US/SearchPageComponent/LoadProgressReporter.resw
+++ b/HitomiScrollViewerApp/Strings/en-US/SearchPageComponent/LoadProgressReporter.resw
@@ -117,8 +117,8 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Text_AddingDatabaseTags" xml:space="preserve">
-    <value>Adding tags to database...</value>
+  <data name="Text_InitialisingDatabase" xml:space="preserve">
+    <value>Initialising database...</value>
   </data>
   <data name="Text_AddingExampleTFSs" xml:space="preserve">
     <value>Creating example tag filter sets....</value>
